<resources>
    <string name="app_name">Photo Editor</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="label_upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="label_frame">Frame</string>
    <string name="label_crop">Crop</string>
    <string name="internal_storage">Internal storage</string>
    <string name="place_order">Place order</string>
    <string name="label_preview">Preview</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
</resources>
